--- a/css/dc-compare.css
+++ b/css/dc-compare.css
@@ -3,6 +3,7 @@ body {
   font-size: 18px;
   color: #484848;
   background-color: #F9F9F9;
+  padding-bottom: 15em;
 }
 .outer-container {
   max-width: 1200px;
@@ -23,6 +24,9 @@ body {
   margin-top: 30px;
   font-family: Helvetica;
 }
+.divider {
+  padding-top: .5em;
+}
 .checkbox-label {
   font-size: 14px;
 }
@@ -36,7 +40,7 @@ body {
   background-color: #FDDEB6;
 }
 .clear {
-  clear: all;
+  clear: both;
 }
 .nowrap {
   white-space: nowrap;
