--- a/css/dc-compare.css
+++ b/css/dc-compare.css
@@ -1,4 +1,5 @@
 body {
+  font-family: serif;
   line-height: 1.6;
   font-size: 18px;
   color: #484848;
@@ -21,13 +22,13 @@ body {
 }
 .version-container {
   margin: 10px;
-  font-family: Helvetica;
+  font-family: sans-serif;
 }
 .chapter-container {
   clear: left;
   margin: 10px;
   margin-top: 30px;
-  font-family: Helvetica;
+  font-family: sans-serif;
 }
 .divider {
   padding-top: .5em;
